--- a/.github/workflows/eks-deploy.yml
+++ b/.github/workflows/eks-deploy.yml
@@ -1,4 +1,4 @@
-name: Aws EC2
+name: Aws EKS
 on: 
      workflow_dispatch:
 permissions: 
@@ -27,10 +27,10 @@ jobs:
               run: terraform version
 
             - name: initialize the dir
-              run: ls -la && cd EKS/ && terraform init
+              run: terraform init
 
             - name: initialize the dir
-              run: cd EKS && terraform plan
+              run: terraform plan
               
 
               
